--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
 
 			<button type="button" class="design-button" onclick="myFunction(0)">Limpiar</button>
 
-			<br> <br>
-
-			<p id="iteraciones" class="design-function"></p>
+			
+			<p id="iteraciones" class="design-function-dos"></p>
 
 		</div>
 
